[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email Triage OpenEnv Environment"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.2",
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
]

[project.scripts]
server = "server.app:main"